<resources>
    <string name="app_name">MotoHook</string>

    <string name="key_settings_hide_header_suggestion">key_settings_hide_header_suggestion</string>
    <string name="key_SystemUi_hide_battery_icon_when_not_charging">key_SystemUi_hide_battery_icon_when_not_charging</string>
    <string name="key_SystemUi_long_press_recent_is_menu">key_SystemUi_long_press_recent_is_menu</string>
    <string name="key_SystemUi_receive_broadcast_open_one_hand_mode">key_SystemUi_receive_broadcast_open_one_hand_mode</string>
    <string name="key_Launcher_recent_tasks_transparent_bg">key_Launcher_recent_tasks_transparent_bg</string>
    <string name="key_Launcher_show_share_screen_shot_btn">key_Launcher_show_share_screen_shot_btn</string>
    <string name="key_Launcher_long_press_open_freeform">key_Launcher_long_press_open_freeform</string>
    <string name="key_Launcher_long_press_open_freeform_as_bubble">key_Launcher_long_press_open_freeform_as_bubble</string>
    <string name="key_Launcher_replace_split_to_share">key_Launcher_replace_split_to_share</string>
    <string name="key_assistant_use_custom_directive">key_assistant_use_custom_directive</string>
    <string name="key_leVoiceST_can_weak_up_by_le">key_leVoiceST_can_weak_up_by_le</string>
    <string name="key_freeform_receive_broadcast_open">key_freeform_receive_broadcast_open</string>
</resources>